--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/pg": "^8.15.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
