--- a/package.json
+++ b/package.json
@@ -37,16 +37,22 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/form-data": "^2.2.1",
+    "@types/formidable": "^3.4.5",
+    "@types/node-fetch": "^2.6.12",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "form-data": "^4.0.3",
+    "formidable": "^3.5.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
