--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "formidable": "^3.5.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "my-v0-project": ".",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
