--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "@types/formidable": "^3.4.5",
     "@types/node-fetch": "^2.6.12",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.0",
     "embla-carousel-react": "8.5.1",
-    "form-data": "^4.0.3",
+    "ethers": "^6.15.0",
+    "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
