--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "formidable": "^3.5.4",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.16",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
@@ -74,6 +74,8 @@
     "@types/pg": "^8.15.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "15.4.2",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
